--- a/cv-side/package.json
+++ b/cv-side/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.13.5",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^6.1.10",
+    "@mui/lab": "^6.0.0-beta.21",
     "@mui/material": "^6.1.10",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
