--- a/cv-side/package.json
+++ b/cv-side/package.json
@@ -18,8 +18,8 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
