--- a/cv-side/package.json
+++ b/cv-side/package.json
@@ -22,6 +22,7 @@
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
